# ITR

./: .gitignore  CMakeLists.txt  CMakeLists.txt.in  DESCRIPTION  DataGeneration.h  DataInfo.cpp  FlexDepthSearch.cpp  FlexDepthSearch.h  NAMESPACE  README.md  Res.cpp  apache-license-2.0.md
R/: ModuleITR.R  RcppExports.R
Version 1.0/: DataGeneration.cpp  DataInfo.h  ITR.cpp  ITR.h  ReadMe.md  Res.h  ThreeDepthSearch.cpp  ThreeDepthSearch.h  main.cpp
Version 2.0/: Git.txt  ReadMe.md
Version 2.0/CPP/: LoadSimpleTestData.h  OneDepthSearch.cpp  OneDepthSearch.h  ReadMe.md  TwoDepthSearch.cpp  main.cpp  pch.h  test.cpp
Version 2.0/Python Verification/: FlexSearch_1D.ipynb  FlexSearch_2D.html  FlexSearch_2D.ipynb  FlexSearch_3D.html  FlexSearch_3D.ipynb  ITR_Test_CreateX.html  OneDepthSearch.html  ThreeDepthSearch.html  ThreeDepthSearch.ipynb
Version 2.0/Test/: Data.cpp  DataInfo.h  FlexDepthSearch.h  ITR.cpp  LoadCSVData.cpp  LoadCSVData.h  ReadMe.md  TwoDepthSearch.h  main.cpp  pch.h  test.cpp
demo/: CMakeLists.txt  SimulationData.cpp  SimulationData.h  demo.cpp  genData.cpp  sample100.csv
doc/Doc Version 2.0 Latex/: main.tex
doc/latex/: demo.tex  install.tex  intro.tex  main.tex  search.tex
include/: CMakeLists.txt  Covariate.h  Data.h  ITR.h  SearchEngine.h  angle_based_classifier.h  comp_search.h  data.h  fdf.h  multimin.h  types.h  vlbfgs.h
man/: ITR-package.Rd
src/: CMakeLists.txt  Covariate.cpp  Covariate.h  CreateLookUpTable.cpp  CreateLookUpTable.h  CreateSimulationData.h  CreateX.cpp  CreateX.h  Data.cpp  Data.h  DataInfo.cpp  FlexDepthSearch.cpp  IProcess.h  ITR.cpp  ITR.h  LoadCSVData.cpp  LoadCSVData.h  LoadData.h  Makevars  RcppExports.cpp  Res.cpp  SearchEngine.cpp  SearchEngine.h  TestSample_100.xlsx  TestSample_100_XTable.csv  angle_based_classifier.cpp  comp_search.cpp  data.cpp  linesearch.cpp  pch.cpp  pch.h  vlbfgs.cpp
src/include/: Covariate.h  Data.h  ITR.h  SearchEngine.h  fdf.h  linesearch.h  multimin.h  vlbfgs.h
test/: BuildInSimpleTestData.csv  CMakeLists.txt  CreateLookUpTable.cpp  CreateSimulationData.cpp  CreateX.cpp  Data.h  FlexDepthSearch.cpp  IProcess.cpp  LoadData.cpp  LoadSimpleTestData.cpp  Res.h  ThreeDepthSearch.cpp  ThreeDepthSearch.h  sample100.csv  test.cpp  utility.hpp
test/util/: CMakeLists.txt  SimulationData.cpp  SimulationData.h  main.cpp
verification/: FlexSearch_1D.html  ITR_Test_CreateLookUpTable.html  ITR_Test_CreateLookUpTable.ipynb  ITR_Test_CreateX.ipynb  OneDepthSearch.ipynb  TwoDepthSearch.html  TwoDepthSearch.ipynb
